Create LOL alike Landing Page

--- a/index.html
+++ b/index.html
@@ -25,19 +25,69 @@
       </div>
     </header>
     <div class="hero">
-      <h2>Choose Your Hero!</h2>
-      <div class="hero-grid">
-        <div class="hero-profile"></div>
-        <div class="hero-profile"></div>
-        <div class="hero-profile"></div>
-        <div class="hero-profile"></div>
+      <div class="game-update">GAME UPDATES</div>
+      <div class="hero-title">SEASON 2024 UPDATES</div>
+      <div class="hero-desc">
+        Some images and details on this page may no longer be accurate in Season
+        2024. Take a look at the 2024 Gameplay Preview for the latest
+        information.
       </div>
+      <button class="btn-learn">LEARN MORE</button>
     </div>
     <div class="main">
-      <div class="picturebox"></div>
-      <div class="picturebox"></div>
-      <div class="picturebox"></div>
-      <div class="picturebox"></div>
+      <div class="main-welcome">WELCOME TO THE RIFT</div>
+      <div class="main-basic">LEARN THE BASICS</div>
+      <div class="main-learn-more">
+        There’s a lot to learn about League, so we’ll start with the essentials.
+        Explore the guide below to get the rundown on the most popular game
+        mode.
+      </div>
+    </div>
+    <div class="backdrop"></div>
+    <div class="champion-tag">
+      <div class="txt1">Choose Your</div>
+      <div class="txt2">CHAMPION</div>
+      <div class="txt3">
+        With more than 140 champions, you’ll find the perfect match for your
+        playstyle. Master one, or master them all.
+      </div>
+    </div>
+    <div class="hero-grid">
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-info">
+          <img src="/" alt="logo" />
+          <div class="hero-name">AATROX</div>
+        </div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
+      <div class="hero-profile">
+        <img src="hero/alatrox.avif" alt="" />
+        <div class="hero-name">AATROX</div>
+      </div>
     </div>
     <footer class="footer">
       <p>
