Add Champion Profile

--- a/index.html
+++ b/index.html
@@ -56,37 +56,81 @@
       <div class="hero-profile">
         <img src="hero/alatrox.avif" alt="" />
         <div class="hero-info">
-          <img src="/" alt="logo" />
+          <div class="hero-roles">
+            <img src="/roles/Fighter_icon.png" alt="logo" />
+          </div>
           <div class="hero-name">AATROX</div>
         </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/ahri.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Mage_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">AHRI</div>
+        </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/akari.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Slayer_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">AKALI</div>
+        </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/amumu.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Support_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">AMUMU</div>
+        </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/anivia.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Mage_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">ANIVIA</div>
+        </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/teemo.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Marksman_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">TEEMO</div>
+        </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/fiddlesticks.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Support_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">FIDDLE</div>
+        </div>
       </div>
+
       <div class="hero-profile">
-        <img src="hero/alatrox.avif" alt="" />
-        <div class="hero-name">AATROX</div>
+        <img src="hero/hecarim.avif" alt="" />
+        <div class="hero-info">
+          <div class="hero-roles">
+            <img src="/roles/Fighter_icon.png" alt="logo" />
+          </div>
+          <div class="hero-name">HECARIM</div>
+        </div>
       </div>
     </div>
     <footer class="footer">
