Change File name of Icon

--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
         <img src="hero/alatrox.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Fighter_icon.png" alt="logo" />
+            <img src="/roles/Fighter-icon.png" alt="logo" />
           </div>
           <div class="hero-name">AATROX</div>
         </div>
@@ -67,7 +67,7 @@
         <img src="hero/ahri.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Mage_icon.png" alt="logo" />
+            <img src="/roles/Mage-icon.png" alt="logo" />
           </div>
           <div class="hero-name">AHRI</div>
         </div>
@@ -77,7 +77,7 @@
         <img src="hero/akari.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Slayer_icon.png" alt="logo" />
+            <img src="/roles/Slayer-icon.png" alt="logo" />
           </div>
           <div class="hero-name">AKALI</div>
         </div>
@@ -87,7 +87,7 @@
         <img src="hero/amumu.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Support_icon.png" alt="logo" />
+            <img src="/roles/Support-icon.png" alt="logo" />
           </div>
           <div class="hero-name">AMUMU</div>
         </div>
@@ -97,7 +97,7 @@
         <img src="hero/anivia.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Mage_icon.png" alt="logo" />
+            <img src="/roles/Mage-icon.png" alt="logo" />
           </div>
           <div class="hero-name">ANIVIA</div>
         </div>
@@ -107,7 +107,7 @@
         <img src="hero/teemo.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Marksman_icon.png" alt="logo" />
+            <img src="/roles/Marksman-icon.png" alt="logo" />
           </div>
           <div class="hero-name">TEEMO</div>
         </div>
@@ -117,7 +117,7 @@
         <img src="hero/fiddlesticks.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Support_icon.png" alt="logo" />
+            <img src="/roles/Support-icon.png" alt="logo" />
           </div>
           <div class="hero-name">FIDDLE</div>
         </div>
@@ -127,7 +127,7 @@
         <img src="hero/hecarim.avif" alt="" />
         <div class="hero-info">
           <div class="hero-roles">
-            <img src="/roles/Fighter_icon.png" alt="logo" />
+            <img src="/roles/Fighter-icon.png" alt="logo" />
           </div>
           <div class="hero-name">HECARIM</div>
         </div>
